회사소개 작업

--- a/css/common.css
+++ b/css/common.css
@@ -22,7 +22,7 @@ img { max-width: 100%; }
 
 .header_inner h1 a { display: block; width: 200px; height: 40px; background-image: url(../images/common/logo_w.svg); background-repeat: no-repeat; background-position: center center; background-size: cover; }
 
-.header.on .header_inner h1 a { background-image: url(../images/common/logo.svg); }
+.header.on .header_inner h1 a, #wrap.sub .header_inner h1 a, .header.on .header_inner h1 a, #wrap.sub .header_inner h1 a { background-image: url(../images/common/logo.svg); }
 
 .header .gnb { text-align: right; }
 
@@ -43,6 +43,14 @@ img { max-width: 100%; }
 .header.on .gnb li a { color: #222; font-weight: bold; }
 
 .header.on .gnb li a span::after { background-color: #2f91e8; }
+
+#wrap.sub .header { background-color: #fff; border-bottom: 1px solid rgba(145, 145, 145, 0.2); }
+
+#wrap.sub .header .gnb li a { color: #222; font-weight: bold; }
+
+#wrap.sub .header .gnb li a span::after { background-color: #2f91e8; }
+
+#wrap.sub #container { padding-top: 100px; }
 
 .mv_item_cont { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; height: 100vh; position: relative; background-color: rgba(0, 0, 0, 0.4); background-repeat: no-repeat; background-position: center center; background-size: cover; }
 
@@ -234,10 +242,96 @@ img { max-width: 100%; }
 
 .footer .inner .txt_box { color: rgba(255, 255, 255, 0.6); font-size: 14px; line-height: 20px; letter-spacing: -0.42px; text-align: right; padding-left: 50px; }
 
+/* sub */
+.sv_wrap { height: 400px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; background-repeat: no-repeat; background-position: center center; background-size: cover; }
+
+.sv_wrap .txt_box { color: #fff; text-align: center; }
+
+.sv_wrap .txt_box h2 { font-size: 40px; font-family: play; font-weight: bold; line-height: 46px; }
+
+.sv_wrap .txt_box p { margin-top: 16px; font-size: 18px; line-height: 27px; opacity: 0.9; }
+
+.sub_sec { padding: 100px 0; }
+
+.sub_sec_tit { margin-bottom: 48px; }
+
+.sub_sec_tit h2 { font-size: 40px; line-height: 59px; }
+
+.sub_sec.bg { background-color: #f7f7f7; }
+
+/* company */
+.about_cont { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
+
+.about_cont .img_box { padding-left: 4%; }
+
+.about_cont .img_box img { max-width: 100%; margin-top: -20px; }
+
+.about_cont .slogan { display: block; font-size: 24px; line-height: 1.42; letter-spacing: -0.72px; margin-bottom: 24px; color: #2f91e8; }
+
+.sub_txt { font-size: 18px; line-height: 27px; font-weight: 500; letter-spacing: -0.54px; }
+
+.year_wrap { overflow: hidden; border-bottom: 1px solid #dbdbdb; padding: 0 40px; position: relative; }
+
+.year_area { overflow-x: auto; -ms-overflow-style: none; /* IE and Edge */ scrollbar-width: none; /* Firefox */ position: relative; text-align: center; }
+
+.year_area::-webkit-scrollbar { display: none; }
+
+.year_list { display: inline-block; vertical-align: top; text-align: center; white-space: nowrap; overflow-x: auto; font-size: 0; position: relative; }
+
+.year_item { display: inline-block; vertical-align: top; width: auto; }
+
+.year_item button { display: block; padding: 0 40px; font-size: 24px; line-height: 40px; font-weight: bold; font-family: play; color: #c6c6c6; -webkit-transition: color .2s ease-in-out; transition: color .2s ease-in-out; }
+
+.year_item.on button { color: #222; }
+
+.year_item button span { display: block; position: relative; padding-bottom: 22px; }
+
+.year_item button span::after { opacity: 0; -webkit-transition: opacity .2s ease-in-out; transition: opacity .2s ease-in-out; content: ''; position: absolute; width: 100%; height: 4px; bottom: 0; left: 0; background-color: #2f91e8; }
+
+.year_item.on button span::after { opacity: 1; }
+
+.btn_year_nav { display: none; position: absolute; width: 40px; height: 40px; top: 0; border: 1px solid #dbdbdb; background-color: #f7f7f7; -webkit-box-sizing: border-box; box-sizing: border-box; background-repeat: no-repeat; background-position: center center; }
+
+.year_wrap.scroll .btn_year_nav { display: block; }
+
+.btn_year_nav.prev { left: 0; background-image: url(../images/sub/ico_prev.svg); }
+
+.btn_year_nav.next { right: 0; background-image: url(../images/sub/ico_next.svg); }
+
+.history_area { padding-top: 80px; }
+
+.history_item { display: none; }
+
+.history_item.on { display: block; }
+
+.history_item h3 { font-size: 40px; line-height: 46px; font-weight: bold; color: #2f91e8; font-family: play; }
+
+.history_cont { margin-top: 32px; }
+
+.history_cont li { font-size: 18px; line-height: 1.33; letter-spacing: -0.54px; font-weight: 500; padding-left: 17px; position: relative; }
+
+.history_cont li + li { margin-top: 12px; }
+
+.history_cont li::before { content: ''; position: absolute; width: 5px; height: 5px; background-color: #222; left: 0; top: 9px; }
+
+.g_map { width: 100%; height: 320px; }
+
+.map_area { margin-bottom: 48px; }
+
+.map_info + .map_info { margin-top: 32px; }
+
+.map_info_tit { font-size: 24px; line-height: 1.4; color: #2f91e8; position: relative; padding-left: 23px; margin-bottom: 12px; letter-spacing: -0.72px; }
+
+.map_info_tit i { font-size: 0; line-height: 0; position: absolute; left: 0; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
+
+.map_info ul li { font-size: 16px; line-height: 1.5; letter-spacing: -0.48px; font-weight: 500; }
+
+.map_info ul li + li { margin-top: 6px; }
+
 @media (max-width: 1024px) { .header { padding: 0 30px; }
   .header .nav_btn { display: block; width: 22px; height: 21px; position: absolute; right: 0; top: 50%; padding: 0; margin-top: -10.5px; z-index: 9999; }
   .header .nav_btn_item { position: absolute; right: 0; height: 3px; width: 100%; background-color: #fff; -webkit-transition: all .4s ease-in-out; transition: all .4s ease-in-out; }
-  .header.on .nav_btn_item { background-color: #222; }
+  .header.on .nav_btn_item, #wrap.sub .nav_btn_item, .header.on .nav_btn_item, #wrap.sub .nav_btn_item { background-color: #222; }
   .header .nav_btn_item.top { top: 0; }
   .header .nav_btn_item.mid { top: 9px; }
   .header .nav_btn_item.bot { top: 18px; }
@@ -260,6 +354,7 @@ img { max-width: 100%; }
   .mv .mv-nav.mv-next { right: 30px; } }
 
 @media (max-width: 767px) { .m_only { display: block !important; }
+  .pc_only { display: none; }
   .header { height: 50px; padding: 0 16px; }
   .header_inner h1 a { width: 170px; height: 34px; }
   .header .gnb li a { font-size: 30px; font-weight: bold; }
@@ -325,4 +420,9 @@ img { max-width: 100%; }
   .footer .inner { display: block; text-align: center; }
   .footer .inner .logo a { display: block; }
   .footer .inner .logo img { height: 34px; }
-  .footer .inner .txt_box { margin-top: 32px; padding-left: 0; text-align: center; } }
+  .footer .inner .txt_box { margin-top: 32px; padding-left: 0; text-align: center; }
+  .year_item button { padding: 0 10px; }
+  #wrap.sub #container { padding-top: 50px; }
+  .about_cont { display: block; }
+  .about_cont .img_box { text-align: center; padding-left: 0; margin-top: 30px; }
+  .about_cont .img_box img { margin-top: 0; } }
