--- a/css/common.scss
+++ b/css/common.scss
@@ -789,7 +789,7 @@ img {
         border-bottom: 1px solid #dbdbdb;
         padding: 0 40px;
         position: relative;
-
+        line-height: 0;
     }
     &_area {
         overflow-x: auto;
