--- a/css/common.scss
+++ b/css/common.scss
@@ -786,10 +786,18 @@ img {
 .year {
     &_wrap {
         overflow: hidden;
-        border-bottom: 1px solid #dbdbdb;
         padding: 0 40px;
         position: relative;
         line-height: 0;
+        &::after {
+            content:'';
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            left: 0;
+            bottom: 0;
+            background-color: #dbdbdb;
+        }
     }
     &_area {
         overflow-x: auto;
@@ -799,10 +807,7 @@ img {
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
         position: relative;
-
         text-align: center;
-
-
     }
     &_list {
         display: inline-block;
