--- a/css/common.css
+++ b/css/common.css
@@ -38,6 +38,8 @@ img { max-width: 100%; }
 
 .header .gnb li a:hover span::after { opacity: 1; }
 
+.header .gnb li.on a span::after { opacity: 1; }
+
 .header.on { background-color: #fff; border-bottom: 1px solid rgba(145, 145, 145, 0.2); }
 
 .header.on .gnb li a { color: #222; font-weight: bold; }
@@ -282,7 +284,7 @@ img { max-width: 100%; }
 
 .year_item { display: inline-block; vertical-align: top; width: auto; }
 
-.year_item button { display: block; padding: 0 40px; font-size: 24px; line-height: 40px; font-weight: bold; font-family: play; color: #c6c6c6; -webkit-transition: color .2s ease-in-out; transition: color .2s ease-in-out; }
+.year_item button { display: block; padding: 0 40px; font-size: 24px; line-height: 40px; font-weight: bold; font-family: play; color: #c6c6c6; -webkit-transition: color .2s ease-in-out; transition: color .2s ease-in-out; outline: none; border: none; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 .year_item.on button { color: #222; }
 
