--- a/css/common.scss
+++ b/css/common.scss
@@ -807,6 +807,8 @@ img {
         overflow-x: auto;
         &::-webkit-scrollbar {
             display: none;
+            width: 0;
+            height: 0;
         }
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
