--- a/css/common.scss
+++ b/css/common.scss
@@ -59,7 +59,9 @@ img {
     height: 100px;
     padding: 0 80px;
     box-sizing: border-box;
-    border-bottom: 1px solid rgba(#fff,0.1);
+    // border-bottom: 1px solid rgba(#fff,0.1);
+    border-bottom: 1px solid rgba(#919191,0.2);
+    background-color: #fff;
     transition: background-color .2s ease-in-out;
     .nav_btn {
         display: none;
@@ -76,11 +78,11 @@ img {
                 display: block;
                 width: 200px;
                 height: 40px;
-                background-image: url(../images/common/logo_w.svg);
-                @at-root #{selector-nest(".header.on, #wrap.sub","#{&}")}{
-                    background-image: url(../images/common/logo.svg);
-                }
-
+                // background-image: url(../images/common/logo_w.svg);
+                // @at-root #{selector-nest(".header.on, #wrap.sub","#{&}")}{
+                //     background-image: url(../images/common/logo.svg);
+                // }
+                background-image: url(../images/common/logo.svg);
                 background-repeat: no-repeat;
                 background-position: center center;
                 background-size: cover;
@@ -102,8 +104,10 @@ img {
                 padding: 0 40px;
                 font-size: 18px;
                 line-height: 100px;
-                color: #fff;
+                // color: #fff;
+                color: $fc_black;
                 font-family: Play;
+                font-weight: bold;
                 span {
                     display: block;
                     position: relative;
@@ -112,7 +116,8 @@ img {
                         position: absolute;
                         width: 100%;
                         height: 4px;
-                        background-color: #fff;
+                        // background-color: #fff;
+                        background-color: $fc_blue;
                         bottom: 0;
                         left: 0;
                         opacity: 0;
@@ -161,11 +166,12 @@ img {
 
 
 .mv {
+    height: 100vh;
     &_item {
         &_cont {
             display: flex;
             align-items: center;
-            height: 100vh;
+            height: 100%;
             position: relative;
             background-color: rgba(0,0,0,.4);
             background-repeat: no-repeat;
@@ -1039,10 +1045,12 @@ img {
                 right: 0;
                 height: 3px;
                 width: 100%;
-                background-color: #fff;
-                @at-root #{selector-nest(".header.on, #wrap.sub",".nav_btn_item")}{
-                    background-color: #222;
-                }
+                // background-color: #fff;
+                // @at-root #{selector-nest(".header.on, #wrap.sub",".nav_btn_item")}{
+                //     background-color: #222;
+                // }
+                background-color: $fc_black;
+                
                 transition: all .4s ease-in-out;
                 &.top {
                     top: 0;
@@ -1129,6 +1137,7 @@ img {
         padding: 20px 16px;
     }
     .mv {
+        min-height: 700px;
         &_item {
             &_txt {
                 font-size: 5vw;
@@ -1214,6 +1223,10 @@ img {
 
     .inner {
         padding: 0 16px;
+    }
+
+    .mv {
+        min-height: 520px;
     }
     .main {
         &_sec {
@@ -1416,6 +1429,10 @@ img {
         }
         .mv-pagination {
             margin-top: 100px;
+            width: 100%;
+            left: 0;
+            transform: translateX(0);
+            text-align: center;
         }
         &_item_txt {
             font-size: 32px;
